--- a/src/main/resources/templates/include/top.html
+++ b/src/main/resources/templates/include/top.html
@@ -9,6 +9,7 @@
                     <li id="userCont" class="userCont"></li>
                     <li id="demo"><a href="DemoDamageDetection">Damage Detection</a></li>
                     <li id="steel"><a href="textRecognition">TextRecognition</a></li>
+                    <li id="steel"><a href="vin">VIN-Recognition</a></li>
                     <!-- 
                     <li id="demo"><a href="DemoType2">Evaluation</a></li>
                     <li id="demo"><a href="DemoTypeSeg">Car Segment</a></li>
