정리 및 수정

--- a/src/main/resources/templates/include/top.html
+++ b/src/main/resources/templates/include/top.html
@@ -7,14 +7,14 @@
             <div class="col-xs-10 text-right menu-1">
                 <ul>
                     <li id="userCont" class="userCont"></li>
-                    <li id="demo"><a href="DemoDamageDetection">Damage Detection</a></li>
+                    <li id="demo"><a href="DamageDetection">Damage Detection</a></li>
                     <li id="steel"><a href="textRecognition">TextRecognition</a></li>
                     <li id="steel"><a href="vin">VIN-Recognition</a></li>
                     <!-- 
-                    <li id="demo"><a href="DemoType2">Evaluation</a></li>
-                    <li id="demo"><a href="DemoTypeSeg">Car Segment</a></li>
-                    <li id="demo"><a href="DemoTypePartSeg">Car Part Segment</a></li>
-                    <li id="demo"><a href="DemoTypeAnpr">ANPR</a></li>
+                    <li id="demo"><a href="Evaluation">Evaluation</a></li>
+                    <li id="demo"><a href="CarSegment">Car Segment</a></li>
+                    <li id="demo"><a href="CarPartSegment">Car Part Segment</a></li>
+                    <li id="demo"><a href="ANPR">ANPR</a></li>
                     -->
                     <li id="contact"><a href="contact">문의하기</a></li>
                 </ul>
