session timeout 설정 및 코드 정리

--- a/src/main/resources/templates/ANPR.html
+++ b/src/main/resources/templates/ANPR.html
@@ -57,7 +57,7 @@
 	<script src="js/magnific-popup-options.js"></script>
 
 	<script src="js/style.js"></script>
-	<script src="js/demoTestAnpr.js"></script>					
+	<script src="js/Anpr.js"></script>					
 	<!-- Main -->
 	<script src="js/main.js"></script>
 
