--- a/src/main/resources/templates/CarPartSegment.html
+++ b/src/main/resources/templates/CarPartSegment.html
@@ -73,7 +73,7 @@
 	<script src="js/magnific-popup-options.js"></script>
 
 	<script src="js/style.js"></script>
-	<script src="js/demoTestPartSeg.js"></script>					
+	<script src="js/CarPartSegment.js"></script>					
 	<!-- Main -->
 	<script src="js/main.js"></script>
 
