--- a/src/main/resources/templates/CarSegment.html
+++ b/src/main/resources/templates/CarSegment.html
@@ -73,7 +73,7 @@
 	<script src="js/magnific-popup-options.js"></script>
 
 	<script src="js/style.js"></script>
-	<script src="js/demoTestSeg.js"></script>					
+	<script src="js/CarSegment.js"></script>					
 	<!-- Main -->
 	<script src="js/main.js"></script>
 
