--- a/src/main/resources/templates/DamageDetection.html
+++ b/src/main/resources/templates/DamageDetection.html
@@ -169,7 +169,7 @@
 	<!-- Login -->
 	<script src="js/userLogin.js"></script>
 	<script src="js/style.js"></script>
-	<script src="js/demoTest2.js"></script>	
+	<script src="js/DamageDetection.js"></script>	
 	</body>
 </html>
 
