--- a/src/main/resources/templates/Evaluation.html
+++ b/src/main/resources/templates/Evaluation.html
@@ -57,7 +57,7 @@
 	<script src="js/magnific-popup-options.js"></script>
 
 	<script src="js/style.js"></script>
-	<script src="js/demoTest4.js"></script>					
+	<script src="js/Evaluation.js"></script>					
 	<!-- Main -->
 	<script src="js/main.js"></script>
 
