login 문문issue complete

--- a/src/main/resources/templates/include/top.html
+++ b/src/main/resources/templates/include/top.html
@@ -16,7 +16,7 @@
                     <li id="demo"><a href="CarPartSegment">Car Part Segment</a></li>
                     <li id="demo"><a href="ANPR">ANPR</a></li>
                     -->
-                    <li id="contact"><a href="contact">문의하기</a></li>
+                    <!-- <li id="contact"><a href="contact">문의하기</a></li> -->
                 </ul>
             </div>
         </div>
