--- a/src/main/resources/templates/include/top.html
+++ b/src/main/resources/templates/include/top.html
@@ -10,11 +10,11 @@
                     <li id="demo"><a href="DamageDetection">Damage Detection</a></li>
                     <li id="steel"><a href="textRecognition">TextRecognition</a></li>
                     <li id="steel"><a href="vin">VIN-Recognition</a></li>
+                    <li id="demo"><a href="anpr">ANPR</a></li>
                     <!-- 
                     <li id="demo"><a href="Evaluation">Evaluation</a></li>
                     <li id="demo"><a href="CarSegment">Car Segment</a></li>
                     <li id="demo"><a href="CarPartSegment">Car Part Segment</a></li>
-                    <li id="demo"><a href="ANPR">ANPR</a></li>
                     -->
                     <!-- <li id="contact"><a href="contact">문의하기</a></li> -->
                 </ul>
