--- a/src/main/resources/templates/ANPR.html
+++ b/src/main/resources/templates/ANPR.html
@@ -115,7 +115,6 @@
       position: absolute;
       top: 50%;
       left: 50%;
-      transform: translate(-50%, -50%);
       width: 504.1px;
       height: 337px;
       border: 2px solid #1ACEA6;
@@ -217,7 +216,7 @@
   <!-- Login -->
   <script src="js/userLogin.js"></script>
   <script src="js/style.js"></script>
-  <script src="js/vin.js"></script>
+  <script src="js/anpr.js"></script>
 </body>
 
 </html>
