--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,29 +5,32 @@
 	URL: http://freehtml5.co
 -->
 <html>
-	<head>
+
+<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Divus</title>
 
-	<meta name="viewport" content="width=device-width, maximum-scale=1.0, minimum-scale=1, user-scalable=yes,initial-scale=1.0" />
+	<meta name="viewport"
+		content="width=device-width, maximum-scale=1.0, minimum-scale=1, user-scalable=yes,initial-scale=1.0" />
 	<meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
-	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
+	<meta name="keywords"
+		content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
 	<meta name="author" content="FreeHTML5.co" />
 
-  	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
+	<!-- Facebook and Twitter integration -->
+	<meta property="og:title" content="" />
+	<meta property="og:image" content="" />
+	<meta property="og:url" content="" />
+	<meta property="og:site_name" content="" />
+	<meta property="og:description" content="" />
 	<meta name="twitter:title" content="" />
 	<meta name="twitter:image" content="" />
 	<meta name="twitter:url" content="" />
 	<meta name="twitter:card" content="" />
 
 	<link rel="shortcut icon" href="divusImages/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="divusImages/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="divusImages/favicon.ico" type="image/x-icon">
 
 	<link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,700" rel="stylesheet">
 
@@ -60,111 +63,120 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 
-	<style> 
-		#loading { 
-			width: 100%; 
-			height: 100%; 
-			top: 0px; 
-			left: 0px; 
-			position: fixed; 
-			display: block; 
-			opacity: 0.7; 
-			background-color: #fff; 
-			z-index: 99; text-align: 
-			center; 
-		} 
-		#loading-image { 
-			position: absolute; 
+	<style>
+		#loading {
+			width: 100%;
+			height: 100%;
+			top: 0px;
+			left: 0px;
+			position: fixed;
+			display: block;
+			opacity: 0.7;
+			background-color: #fff;
+			z-index: 99;
+			text-align:
+				center;
+		}
+
+		#loading-image {
+			position: absolute;
 			top: 50%;
 			left: 50%;
 			margin-top: -100px;
 			margin-left: -100px;
-			z-index: 100; 
+			z-index: 100;
 		}
 	</style>
-	</head>
-	<body>
-		<div id="loading" style="display: none;"><img id="loading-image" src="images/loading.gif" alt="Loading..."/></div>
-		<div class="gtco-loader"></div>
+</head>
 
-		<div id="page" style="position: relative;">
-			<th:block th:replace="include/top.html"></th:block>
-			<header id="gtco-header" class="gtco-cover gtco-cover-xs gtco-inner" role="banner">
-				<div class="gtco-container">
-					<div class="row">
-						<div class="col-md-12 col-md-offset-0 text-left">
-							<div class="display-t">
-								<div class="display-tc">
-									<div class="row">
-										<div class="col-md-8 animate-box">
-											<h1 class="no-margin"></h1>
-											<p></p>
-										</div>
+<body>
+	<div id="loading" style="display: none;"><img id="loading-image" src="images/loading.gif" alt="Loading..." /></div>
+	<div class="gtco-loader"></div>
+
+	<div id="page" style="position: relative;">
+		<th:block th:replace="include/top.html"></th:block>
+		<header id="gtco-header" class="gtco-cover gtco-cover-xs gtco-inner" role="banner">
+			<div class="gtco-container">
+				<div class="row">
+					<div class="col-md-12 col-md-offset-0 text-left">
+						<div class="display-t">
+							<div class="display-tc">
+								<div class="row">
+									<div class="col-md-8 animate-box">
+										<h1 class="no-margin"></h1>
+										<p></p>
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-			</header>
-			<!-- END #gtco-header -->
-			
-			<!-- END .gtco-services -->
-			<!-- <th:block th:replace="include/footer.html"></th:block> -->
-			<footer id="gtco-footer" class="gtco-section" role="contentinfo" style="height: 500px;"></footer>
-		</div>
+			</div>
+		</header>
+		<!-- END #gtco-header -->
 
-		<div class="gototop js-top">
-			<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
-		</div>
-		
-		<div style="display: flex; justify-content: center; position: absolute; top: 300px; width: 100%;">
-			<form id="form" style="width: 600px; height: 400px; padding: 30px; margin: 0; background-color: #fff; text-align: center; border-radius: 10px; z-index: 99;" action="/doLogin" method="POST">
-				<img src="divusImages/logo.png" alt="" style="padding-top: 10px;"><br>
-				<ul style="list-style: none; padding-top: 70px;">
-					<li id="idLi" style="display: flex; justify-content: space-between; border-bottom: 1px solid gray; width: 460px;">
-						<p style="float: left; width: 80px; text-align: left; padding: 0; margin: 0 0 3px 0; border-right-style: inset;">아이디</p>
-						<input type="text" name="userid" id="id" style="border: none;  width: 70%; padding: 0; margin: 0; outline: none;">
-						<i class="far fa-user"></i>
-					</li>
-					<li id="pwLi" style="display: flex; justify-content: space-between;  border-bottom: 1px solid gray; width: 460px; padding-top: 30px;">
-						<p style="float: left; width: 80px; text-align: left; padding: 0; margin: 0 0 3px 0; border-right-style: inset;">비밀번호</p>
-						<input type="password" name="passwd" id="pw" style="border: none; width: 70%; padding: 0; margin: 0; outline: none;">
-						<i id="closedEye" class="far fa-eye-slash" style="padding: 0; margin: 0;"></i>
-						<i id="eye" class="far fa-eye" style="display: none; padding: 0; margin: 0;"></i>
-					</li>
-				</ul>
-				<div style="width: 100%; display: flex; justify-content: center; padding-top: 30px;">
-					<button id="submitBtn" class="btn btn-primary btn-sm">로그인</button>
-				</div>
-			</form>
-		</div>
-		<!-- jQuery -->
-		<script src="js/jquery.min.js"></script>
-		<!-- jQuery Easing -->
-		<script src="js/jquery.easing.1.3.js"></script>
-		<!-- Bootstrap -->
-		<script src="js/bootstrap.min.js"></script>
-		<!-- Waypoints -->
-		<script src="js/jquery.waypoints.min.js"></script>
-		<!-- Carousel -->
-		<script src="js/owl.carousel.min.js"></script>
-		<!-- Magnific Popup -->
-		<script src="js/jquery.magnific-popup.min.js"></script>
-		<script src="js/magnific-popup-options.js"></script>
-		<!-- Main -->
-		<script src="js/main.js"></script>
+		<!-- END .gtco-services -->
+		<!-- <th:block th:replace="include/footer.html"></th:block> -->
+		<footer id="gtco-footer" class="gtco-section" role="contentinfo" style="height: 500px;"></footer>
+	</div>
 
-		<!-- Login -->
-		<script src="js/userLogin.js"></script>
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-		<script src="https://kit.fontawesome.com/537f2d83ee.js" crossorigin="anonymous"></script>
-	</body>
+	<div class="gototop js-top">
+		<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
+	</div>
+
+	<div style="display: flex; justify-content: center; position: absolute; top: 300px; width: 100%;">
+		<form id="form"
+			style="width: 600px; height: 400px; padding: 30px; margin: 0; background-color: #fff; text-align: center; border-radius: 10px; z-index: 99;"
+			action="/doLogin" method="POST">
+			<img src="divusImages/logo.png" alt="" style="padding-top: 10px;"><br>
+			<ul style="list-style: none; padding-top: 70px;">
+				<li id="idLi"
+					style="display: flex; justify-content: space-between; border-bottom: 1px solid gray; width: 460px;">
+					<p
+						style="float: left; width: 80px; text-align: left; padding: 0; margin: 0 0 3px 0; border-right-style: inset;">
+						아이디</p>
+					<input type="text" name="userid" id="id"
+						style="border: none;  width: 70%; padding: 0; margin: 0; outline: none;">
+					<i class="far fa-user"></i>
+				</li>
+				<li id="pwLi"
+					style="display: flex; justify-content: space-between;  border-bottom: 1px solid gray; width: 460px; padding-top: 30px;">
+					<p
+						style="float: left; width: 80px; text-align: left; padding: 0; margin: 0 0 3px 0; border-right-style: inset;">
+						비밀번호</p>
+					<input type="password" name="passwd" id="pw"
+						style="border: none; width: 70%; padding: 0; margin: 0; outline: none;">
+					<i id="closedEye" class="far fa-eye-slash" style="padding: 0; margin: 0;"></i>
+					<i id="eye" class="far fa-eye" style="display: none; padding: 0; margin: 0;"></i>
+				</li>
+			</ul>
+			<div style="width: 100%; display: flex; justify-content: center; padding-top: 30px;">
+				<button id="submitBtn" class="btn btn-primary btn-sm">로그인</button>
+			</div>
+		</form>
+	</div>
+	<!-- jQuery -->
+	<script src="js/jquery.min.js"></script>
+	<!-- jQuery Easing -->
+	<script src="js/jquery.easing.1.3.js"></script>
+	<!-- Bootstrap -->
+	<script src="js/bootstrap.min.js"></script>
+	<!-- Waypoints -->
+	<script src="js/jquery.waypoints.min.js"></script>
+	<!-- Carousel -->
+	<script src="js/owl.carousel.min.js"></script>
+	<!-- Magnific Popup -->
+	<script src="js/jquery.magnific-popup.min.js"></script>
+	<script src="js/magnific-popup-options.js"></script>
+	<!-- Main -->
+	<script src="js/main.js"></script>
+
+	<!-- Login -->
+	<script src="js/userLogin.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+		crossorigin="anonymous"></script>
+	<script src="https://kit.fontawesome.com/537f2d83ee.js" crossorigin="anonymous"></script>
+</body>
+
 </html>
-
-<script>
-	$(window).load( function() { 
-		localStorage.removeItem('token');
-	});
-</script>
-
