--- a/src/main/resources/templates/include/top.html
+++ b/src/main/resources/templates/include/top.html
@@ -7,7 +7,7 @@
             <div class="col-xs-10 text-right menu-1">
                 <ul>
                     <li id="nav-login" style="display: inline-block;"><a href="login">login</a></li>
-                    <li id="nav-logout" style="display: none;"><a href="/">logout</a></li>
+                    <li id="nav-logout" style="display: inline-block;"><a href="logout">logout</a></li>
                     <li id="demo"><a href="DamageDetection">Damage Detection</a></li>
                     <li id="steel"><a href="textRecognition">TextRecognition</a></li>
                     <li id="steel"><a href="vin">VIN-Recognition</a></li>
