--- a/src/main/resources/templates/DamageDetection.html
+++ b/src/main/resources/templates/DamageDetection.html
@@ -5,32 +5,34 @@
 	URL: http://freehtml5.co
 -->
 <html>
-	<head>
+
+<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Divus</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
-	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
+	<meta name="keywords"
+		content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
 	<meta name="author" content="FreeHTML5.co" />
 
-  	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
+	<!-- Facebook and Twitter integration -->
+	<meta property="og:title" content="" />
+	<meta property="og:image" content="" />
+	<meta property="og:url" content="" />
+	<meta property="og:site_name" content="" />
+	<meta property="og:description" content="" />
 	<meta name="twitter:title" content="" />
 	<meta name="twitter:image" content="" />
 	<meta name="twitter:url" content="" />
 	<meta name="twitter:card" content="" />
 
 	<link rel="shortcut icon" href="divusImages/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="divusImages/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="divusImages/favicon.ico" type="image/x-icon">
 
 	<link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,700" rel="stylesheet">
-	
+
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
@@ -59,46 +61,78 @@
 
 	<link rel="stylesheet" href="css/uploadStyle.css">
 
-	<style> 
-	#loading { 
-		width: 100%; 
-		height: 100%; 
-		top: 0px; 
-		left: 0px; 
-		position: fixed; 
-		display: block; 
-		opacity: 0.7; 
-		background-color: #fff; 
-		z-index: 99; text-align: 
-		center; 
-	} 
-	#loading-image { 
-		position: absolute; 
-		top: 50%;
-		left: 50%;
-		margin-top: -100px;
-		margin-left: -100px;
-		z-index: 100;
-	
-    }
-    .popup_panel { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: 100;}
-    .popup_panel div.popup_bg { position: absolute; top: 0; left: 0; width: 100%; height: 100%; background:#000; opacity:.5; filter:alpha(opacity=50); }
-    .popup_panel div.popup_contents { position: absolute; top: 50%; left: 50%; width: 504.1px; height: 337px; border:2px solid #1ACEA6; background-color:#fff; border-radius: 9px;}
-    </style>
-    
-	</head>
-	<body>
+	<style>
+		#loading {
+			width: 100%;
+			height: 100%;
+			top: 0px;
+			left: 0px;
+			position: fixed;
+			display: block;
+			opacity: 0.7;
+			background-color: #fff;
+			z-index: 99;
+			text-align:
+				center;
+		}
+
+		#loading-image {
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			margin-top: -100px;
+			margin-left: -100px;
+			z-index: 100;
+
+		}
+
+		.popup_panel {
+			display: none;
+			position: fixed;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			z-index: 100;
+		}
+
+		.popup_panel div.popup_bg {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			background: #000;
+			opacity: .5;
+			filter: alpha(opacity=50);
+		}
+
+		.popup_panel div.popup_contents {
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			width: 504.1px;
+			height: 337px;
+			border: 2px solid #1ACEA6;
+			background-color: #fff;
+			border-radius: 9px;
+		}
+	</style>
+
+</head>
+
+<body>
 	<div class="gtco-loader"></div>
-    <div id="loading" style="display: none;"><img id="loading-image" src="images/loading.gif" alt="Loading..."/></div>
-    <div class="popup_panel">
-        <div class="popup_bg"></div>
-        <div id="resultImg" class="popup_contents">
+	<div id="loading" style="display: none;"><img id="loading-image" src="images/loading.gif" alt="Loading..." /></div>
+	<div class="popup_panel">
+		<div class="popup_bg"></div>
+		<div id="resultImg" class="popup_contents">
 			<a href="javascript:void(0)" id="btn_popup_close">팝업 닫기</a>
 			<p class="typeColor" style="position: absolute; left: 87%; top: 300px; color: red;">scratch</p>
 			<p class="typeColor" style="position: absolute; left: 92%; top: 300px; color: plum;">dent</p>
 			<p class="typeColor" style="position: absolute; left: 96%; top: 300px; color: yellowgreen;">crack</p>
-        </div>
-    </div>
+		</div>
+	</div>
 	<div id="page">
 		<th:block th:replace="include/top.html"></th:block>
 		<header id="gtco-header" class="gtco-cover gtco-cover-xs gtco-inner" role="banner">
@@ -120,29 +154,37 @@
 		</header>
 		<!-- END #gtco-header -->
 
-        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
+		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
 		<div class="container center" style="padding-top: 500px; padding-bottom: 200px;">
-            <div class="row">
-                <div class="col-md-12" style="position: relative;">
-                    <h1 class="fontColor" style="font-weight: lighter; font-size: 50px; padding-top: 200px;">Demage Detection Page</h1>
+			<div class="row">
+				<div class="col-md-12" style="position: relative;">
+					<h1 class="fontColor" style="font-weight: lighter; font-size: 50px; padding-top: 200px;">Demage Detection Page
+					</h1>
 					<p id="subtitle" style="font-size: 12px; display: none;">썸네일을 클릭하시면 Damage Detection 창이 팝업됩니다.</p>
 				</div>
 			</div>
 			<form>
 				<div id="thumbnailBody" class="container" style="display: none; justify-content: center;">
-					<div id="thumbnailCon" class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3" style="width: 530px; border: solid black 1px; height: 320px; padding: 35px; overflow: scroll; overflow-x: hidden;"></div>
-					<div id="jsonBox" style="width: 400px; height: 320px; margin-left: 35px; padding-left: 10px; border: solid black 1px;">
-						<p style="float: left; margin: 0; color: #33a3bd;">JSON Data of Damages</p>
-						<textarea style="float: left; width: 380px; height: 280px; border: none; outline: none;" id="jsonStr"></textarea>
+					<div id="thumbnailCon" class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3"
+						style="width: 530px; border: solid black 1px; height: 320px; padding: 35px; overflow: scroll; overflow-x: hidden;">
 					</div>
-				</div>			
-				<button type="button" id="btnup" class="btn btn-primary btn-lg" style="font-weight: lighter; font-size: 20px; margin-top: 30px;">업로드</button>
-				<button type="button" id="refresh" class="btn btn-primary btn-lg" style="font-weight: lighter; font-size: 20px; margin-top: 30px; display: none;">새로고침</button>
+					<div id="jsonBox"
+						style="width: 400px; height: 320px; margin-left: 35px; padding-left: 10px; border: solid black 1px;">
+						<p style="float: left; margin: 0; color: #33a3bd;">JSON Data of Damages</p>
+						<textarea style="float: left; width: 380px; height: 280px; border: none; outline: none;"
+							id="jsonStr"></textarea>
+					</div>
+				</div>
+				<button type="button" id="btnup" class="btn btn-primary btn-lg"
+					style="font-weight: lighter; font-size: 20px; margin-top: 30px;">업로드</button>
+				<button type="button" id="refresh" class="btn btn-primary btn-lg"
+					style="font-weight: lighter; font-size: 20px; margin-top: 30px; display: none;">새로고침</button>
 				<input type="file" id="select" style="display: none;" multiple>
-				<p id="useage" style="margin-top: 20px;">이미지는 최대 8장 까지 업로드 할 수 있습니다.(jpg, bmp) <br>이미지 최소 사이즈는 512 X 512 입니다.</p>
+				<p id="useage" style="margin-top: 20px;">이미지는 최대 8장 까지 업로드 할 수 있습니다.(jpg, bmp) <br>이미지 최소 사이즈는 512 X 512 입니다.
+				</p>
 				<p id="version" style="font-size: 10px;">version - 0. 1. 10 ( alpha, 2021. 01. 06 )</p>
 			</form>
-        </div>
+		</div>
 		<!-- END .gtco-services -->
 		<th:block th:replace="include/footer.html"></th:block>
 	</div>
@@ -150,7 +192,9 @@
 	<div class="gototop js-top">
 		<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
 	</div>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+		crossorigin="anonymous"></script>
 	<!-- jQuery -->
 	<script src="js/jquery.min.js"></script>
 	<!-- jQuery Easing -->
@@ -169,7 +213,7 @@
 	<!-- Login -->
 	<script src="js/userLogin.js"></script>
 	<script src="js/style.js"></script>
-	<script src="js/DamageDetection.js"></script>	
-	</body>
-</html>
+	<script src="js/DamageDetection.js"></script>
+</body>
 
+</html>
