--- a/src/main/resources/templates/ANPR.html
+++ b/src/main/resources/templates/ANPR.html
@@ -216,7 +216,7 @@
   <!-- Login -->
   <script src="js/userLogin.js"></script>
   <script src="js/style.js"></script>
-  <script src="js/anpr.js"></script>
+  <script src="js/ANPR.js"></script>
 </body>
 
 </html>
